--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
     margin: 0;
     padding: 0;
     line-height: 1;
-    width: auto;
+    max-width: 100%;
 }
 ol, ul,li {
     list-style: none;
@@ -56,11 +56,10 @@ a{
 .title__div{
     display: flex;
     width: 1136px;
-    justify-content: space-between;
+    flex-direction: row-reverse;
+    justify-content: center;
     align-items: center;
 }
-
-
 
 .title__profile{
     width: 368px;
