--- a/style.css
+++ b/style.css
@@ -1,13 +1,16 @@
+/*General*/
+
+:root{
+   --cor-de-fundo: #F5F5F5;
+   --cor-de-link: #000;
+}
 body {
-    display: flex;
-    align-items: center;
     box-sizing: border-box;
     background-color: var(--cor-de-fundo) ;
     font-family: 'Raleway';
     margin: 0;
     padding: 0;
     line-height: 1;
-    max-width: 100%;
 }
 ol, ul,li {
     list-style: none;
@@ -16,22 +19,62 @@ a{
     text-decoration: none;
     color: var(--cor-de-link);
 }
+.todo{
+    display: flex;
+    width: auto;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 32px;
+}
 
-/*Header*/
+/*Menu*/
 
 .menu{
     display: flex;
-    position: absolute;
     width: 1136px;
-    justify-content: space-around;
+    padding: 32px 0px;;
+    justify-content: space-between;
     align-items: center;
-    width: 100%;
-    z-index: 9999;   
+    
 }
-
 .menu__header{
     display: flex;
     align-items: center;
+    gap: 8px;
+}
+.vector{
+    width: 24px;
+    height: 24px;
+}
+.menu__title{
+    color: var(--preto-100, #464646);
+    font-family: Raleway;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+.links{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: nowrap;
+    gap: 32px;
+
+}
+.menu__list{
+    color: var(--preto-100, #464646);
+    font-family: Raleway;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    display: flex;
+    align-items: center;
+    gap: 32px;
+}
+.menu__list li:last-child{
     color: var(--preto-100, #464646);
     font-family: Raleway;
     font-size: 16px;
@@ -40,75 +83,79 @@ a{
     line-height: normal;
 }
 
-.menu__title{
-    width: auto 102px;
-    height: auto 19px;
-}
-
-.menu__list{
-    display: flex;
-    align-items: center;
-    gap: 32px;
-}
-
 /*Hero*/
 
-.title__div{
+.title{
+    box-sizing: border-box;
     display: flex;
+    top: 32px;
+    bottom: 32px;
+    border: 0;
+    padding: 0;
     width: 1136px;
-    flex-direction: row-reverse;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
 }
-
+.title__div{
+    box-sizing: border-box;
+    display: flex;
+    top: 32px;
+    bottom: 32px;
+    border: 0;
+    padding: 0;
+    width: 1136px;
+    justify-content: space-between;
+    align-items: center;
+}
 .title__profile{
+    display: block;
+    box-sizing: border-box;
+    position: relative;
+    left: 208px;
     width: 368px;
     height: 368px;
-    padding: 100px;
+    flex-shrink: 0;
+    border-radius: 368px;
+    background: url(<path-to-image>), lightgray 50% / cover no-repeat;
+}
+.title__container{
+    display: flex;
+    box-sizing: border-box;
+    border: 0;
+    padding: 0;
+    width: 751px;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 24px;
     flex-shrink: 0;
 }
-
-
-/* Vamos a desafiarnos trabajando con responsividad?
-Utiliza las referencias de los breakpoints @media abajo */
-
-
-/*Tablet*/
-@media (min-width: 768px) {
-
-/* Menú */
-
-/*title*/
-
-/*Skills*/
-
-/*Hobbies*/
-
-/*Formación Académica*/
-
-/*Experiencia Profesional*/
-
+.title__bio{
+    align-self: stretch;
+    color: var(--preto-100, #464646);
+    font-family: Raleway;
+    font-size: 52px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+.title__subsection{
+    align-self: stretch;
+    color: var(--preto-100, #464646);
+    font-family: Raleway;
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+.title__network{
+    box-sizing: border-box;
+    display: flex;
+    align-items: flex-start;
+    gap: 32px;
+}
+.title__network__item{
+    display: flex;
+    align-items: center;
+    gap: 4px;
 }
 
-/*Mobile*/
-@media (min-width: 425px) {
-
-/*Menu*/
-
-/*Titulo*/
-
-/*Sección sobre mi*/
-
-/*Skills*/
-
-/*Hobbies*/
- 
-/*Formación Académica*/
-
-/*Experiencia Profesional*/
-
- /*Contacto*/
-
-/*Footer*/
-
-}
